# grimoire

./: .gitignore  CMakeLists.txt  README.md
include/: G_TextBox.h  configManager.h  dataManager.h  editor.h  editorWindow.h  findReplace_Window.h  loadFile_Window.h  mainWin.h  mainWin.h.old  ui_mainWin.h
resources/: MainWin.ui  mainWin.ui
src/: G_TextBox.cpp  configManager.cpp  dataManager.cpp  editor.cpp  editorWindow.cpp  findReplace_Window.cpp  loadFile_Window.cpp  main.cpp  mainWin.cpp  mainWin.cpp.old
